<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- SyncAdapter related -->
    <string name="content_authority" translatable="false">com.speko.android</string>
    <string name="firebase_database_node_users" translatable="false">users</string>

    <!-- TODO: Remove or change this placeholder name -->

    <!-- Languages entries for user selection-->
    <string name="language_entry_pt_br">Brazilian Portuguese</string>
    <string name="language_entry_en_us">United States English</string>
    <string name="language_entry_es">Spanish</string>


    <string name="complete_language_pt_br" tools:ignore="UnusedResources">@string/language_entry_pt_br</string>
    <string name="complete_language_en_us" tools:ignore="UnusedResources">@string/language_entry_en_us</string>
    <string name="complete_language_sp" tools:ignore="UnusedResources">@string/language_entry_es</string>



    <!-- Languages values for use by the system. Not translatable-->
    <string name="language_value_pt_br" translatable="false">PT-BR</string>
    <string name="language_value_en_us" translatable="false">EN-US</string>
    <string name="language_value_sp" translatable="false">SP</string>


    <!-- Button for test syncinc -->
    <string name="sync_button">Sync Button</string>
    <string name="menu_search">Users</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_conversations">Conversations</string>
    <string name="conversations_fragment_title">Your list of recent conversations:</string>
    <string name="language_of_interest">Language of Interest*</string>
    <string name="button_profile_confirmation_change">Change</string>
    <string name="friends_that_can_help_you_title">Friends that can help you:</string>
    <string name="title_activity_chat" translatable="false">ChatActivity</string>



    <!-- Profile form texts-->
    <string name="age_label_text_field">Age</string>

    <string name="log_out">Log Out</string>
    <string name="signup_description_label">Describe yourself =)</string>
    <string name="select_fluent_language">Select your fluent language</string>
    <string name="select_language_of_interest">Select your language of interest</string>
    <string name="profile_select_option_text">Select</string>
    <string name="name_label_text_field">Name*</string>
    <string name="profile_fluent_language_text_view">Fluent Language*</string>





    <!-- Firebase refs-->
    <string name="user_pictures" translatable="false">user_pitctures</string>


    <string name="languages_must_be_different_error">Fluent Language and Language of Interest MUST be different</string>
    <string name="age_not_acceptable_error">Please put an acceptable age.</string>
    <string name="string_widget_conversations">User Conversations</string>

    <!-- Shared Preferences Status-->
    <string name="shared_preference_sync_status_key" translatable="false">sync-status</string>
    <string name="shared_preference_active_connectivity_status_key" translatable="false">active-connectivity-status</string>


    <!-- Error messages -->

    <string name="no_friend_to_show">No friends to show</string>
    <string name="sync_status_message_server_down">No friends to show. The server is not returning data.</string>
    <string name="sync_status_message_server_error">No friends to show. The server is not returning valid data.</string>
    <string name="empty_conversations_list_no_network">The network is not available to fetch data</string>
    <string name="connectivity_error">Please verify your connectivity</string>
    <string name="profile_register">Register</string>
    <string name="error_must_choose_language_of_interest">You must select your language of interest.</string>
    <string name="error_must_choose_fluent_language">You must choose a fluent language.</string>
    <string name="fulano_de_tal_viewholder" translatable="false">Fulano de Tal Fulano de Tal Fulano de Tal Fulano de Tal Fulano de tal fulano de tal Fulano de Tal Fulano de Tal</string>


    <!--others-->


    <string name="profile_picture_content_description">Your profile picture</string>
    <string name="profile_name_content_description">Your profile name</string>
    <string name="profile_description_label_content_description">Your profile user description</string>
    <string name="button_profile_confirmation_change_content_description">Button Change</string>
    <string name="log_out_content_description">Logout Button</string>
    <string name="profile_register_content_description">Register Button</string>
    <string name="a11y_other_user_content_description">You are talking to: <xliff:g id="other_user_name">%1$s</xliff:g></string>
    <string name="a11y_friend_fluent_language_content_description">Your friend fluent language: <xliff:g id="fluent_language_complete">%1$s</xliff:g></string>
    <string name="a11y_friend_name_content_description">Your friend name: <xliff:g id="friend_name">%1$s</xliff:g> </string>
    <string name="a11y_friend_picture_content_description">Your friend\'s picture</string>
    <string name="bottom_navigation_view_content_description">Bottom Navigation Layout</string>
    <string name="a11y_profile_name_content_description">Your profile name is<xliff:g id="profile_name">%1$s</xliff:g> </string>
    <string name="profile_empty_content_description">empty</string>
    <string name="a11y_profile_age_content_description">Your profile age is<xliff:g id="profile_age">%1$s</xliff:g> </string>
    <string name="a11y_profile_user_description_content_description">Your profile user\'s description is <xliff:g id="profile_description">%1$s</xliff:g> </string>
    <string name="profile_fluent_language_content_descritption">Your profile fluent language is<xliff:g id="profile_fluent_language">%1$s</xliff:g> </string>
    <string name="profile_language_of_interest_content_descritption">Your profile language of interest is<xliff:g id="profile_language_of_interest">%1$s</xliff:g> </string>
    <string name="speko_splash_image_content_descrition">Speko Splash Image</string>
    <string name="your_fluent_language_picture_representation">Your fluent language picture representation</string>
    <string name="profile_update_toast">Profile Updated!</string>
    <string name="must_fill_name">You must fill a name.</string>
    <string name="at_least_3_char" translatable="false">The name must be at least 3 characters</string>
    <string name="sign_up_success">Signed Up Successfully!</string>


</resources>