<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/profile_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/signup_imageview_profile_picture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/default_margin_form"
                android:src="@drawable/ic_placeholder_profile_photo"
                android:text="@string/button_profile_upload_picture"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signup_upload_picture"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginBottom="@dimen/default_margin_form"
                android:text="@string/button_profile_upload_picture"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_form"
                android:hint="@string/age_label_text_field"
                app:layout_columnSpan="2"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_edittext_input_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/default_margin_form"
                android:text="Fluent Language"
                app:layout_columnWeight="1" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/signup_spinner_input_age_fluent_language"
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/default_margin_form"
                android:entries="@array/options_entries_languades"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                app:layout_columnWeight="1"
                tools:listheader="option" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_marginBottom="@dimen/default_margin_form"
                android:text="@string/language_of_interest"
                app:layout_columnWeight="1" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/signup_spinner_input_age_language_of_interest"
                android:layout_marginBottom="@dimen/default_margin_form"
                android:entries="@array/options_entries_languades"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                app:layout_columnWeight="1"
                tools:listheader="option" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_form"

                android:hint="@string/signup_description_label"
                app:layout_columnSpan="2"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_user_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin_form"
                    android:maxLength="500"
                    app:layout_columnWeight="1" />
            </android.support.design.widget.TextInputLayout>



            <android.support.v7.widget.AppCompatButton
                android:id="@+id/fragment_button_profile_change"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginBottom="@dimen/default_margin_form"
                android:text="@string/button_profile_confirmation_change"
                app:layout_columnSpan="2"
                app:layout_gravity="center_horizontal" />


        </android.support.v7.widget.GridLayout>

    </ScrollView>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

</FrameLayout>


